# touconv

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  converter.rs  errors.rs  events.rs  lib.rs  main.rs
src/parsers/: mod.rs
src/parsers/xml/: common.rs  mod.rs
src/parsers/xml/subparsers/: mod.rs  ooxml.rs
src/writers/: mod.rs  stdout.rs
test/data/: title_and_paragraph.docx
test/data/title_and_paragraph_docx_unzipped/docProps/: app.xml  core.xml
test/data/title_and_paragraph_docx_unzipped/word/: document.xml  styles.xml
