[package]
name = "touconv"
version = "0.1.0"
authors = ["Milan Bracke <milan.bracke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
quick-xml = "0.22.0"
thiserror = "1.0"
structopt = "0.3.21"
mockall = "0.10.2"
